#17.0 Github Login part One

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MAILGUN_USERNAME = "brad@sandbox60ae3a06afbf4c1aa03319285c8d1786.mailgun.org"
 MAILGUN_PASSWORD = "188305e149370fb54f2e67783cfa0cee-787e6567-2f487b30"
+GH_ID = "fcbbf399c3b566148fa8"
+GH_SECRET = "f51150bcb6507e5eda39b8f87408828f864c575c"
